--- a/exemplo2_ingressos/styles.css
+++ b/exemplo2_ingressos/styles.css
@@ -1,37 +1,105 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    font-family: arial, sans-serif;
-    background-color: rgba(0, 255, 255, 0);
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    background-color: rgb(233, 203, 129);
     color: black;
     /*Garante que o body ocupe toda a altura da tela*/
     min-height: 100vh;
-}
-
-header{
-    background-color: rgb(237, 227, 166);
-    padding: 20px; 
-    color:black;
+  }
+  
+  header {
+    background-color: rgb(241, 235, 167);
+    padding: 20px;
+    color: rgb(0, 0, 0);
     text-align: center;
-}
-
-.logo{
-    /*uso do flex para alinhar a logo e o titulo*/
-    display: flex; 
-    /*Alinha verticalmente os intems da div em questão*/
+  }
+  
+  header .logo  {
+    /*uso do flexbox para alinhar a logo e o título*/
+    display: flex;
+  
+    /*Alinha verticalmente os itens da div em questão*/
     align-items: center;
-    /*centraliza o conteudo horizontalmente*/
+  
+    /*Centraliza os itens horizontalmente*/
     justify-content: center;
+    /*background-color: brown;*/
+  }
+  
+  header .logo img {
+      max-width: 50px;
+      margin-right: 10px;
+      margin-bottom: 10px; 
+  }
+  header .logo h1{
+    margin-bottom: 10px; 
+  }
+  
+  nav ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  nav ul li{
+    margin:0 15px
+  }
 
-    background-color: rgb(248, 219, 139);
+  nav ul li a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  nav ul li a:hover{
+    text-decoration: underline;
+    
+  }
 
-}
+  main{
+    padding: 20px;
+  }
 
-img{
-    width: 50px;
-    margin-right: 10px;
-}
+  main section {
+    margin-bottom: 40px;
+  }
+
+  #home{
+    background-color: rgba(241, 235, 167);
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+  }
+
+  #home h2{
+    color:rgb(0, 0, 0);
+  }
+
+ .eventos-container{
+    display: flex;
+    gap: 20px;
+  }
+
+  .eventos-item{
+    background-color: rgb(241, 235, 167);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 20px 3px;
+    width: 100%;
+  }
+
+  footer{
+    bottom: 0;
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    width: 100%;
+    padding: 20px;
+    position: fixed;
+  }
